checkpoint: working Vite + React build

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://LeafusBonesboro.github.io/FantasyFootballOptimizer",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
@@ -8,21 +7,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist --depth 1"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.2",
-    "@mui/material": "^6.1.2",
     "axios": "^1.7.8",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.26.2",
+    "swiper": "^11.2.10",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -35,7 +29,6 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
