cleanup: finalize migration to Next.js in root

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,46 @@
-# ==============================
-# Node.js / Next.js
-# ==============================
-node_modules/
-.next/
-out/
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# ==============================
-# Environment files
-# ==============================
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# testing
+/coverage
 
-# ==============================
-# Logs
-# ==============================
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+.pnpm-debug.log*
 
-# ==============================
-# Prisma
-# ==============================
-/frontend-next/prisma/*.db
-/frontend-next/prisma/migrations/dev.db
+# env files
+.env
+.env.local
+.env.development
+.env.production
 
-# ==============================
-# OS files
-# ==============================
-.DS_Store
-Thumbs.db
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# prisma
+/src/generated/prisma
+/prisma/migrations/
