--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "frontend-next",
+  "name": "delta-treats",         
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.16.0",
