--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "delta-treats",         
+  "name": "delta-treats",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -24,6 +24,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "postcss": "^8.5.6",
+    "prisma": "^6.16.1",
     "tailwindcss": "^4.1.13"
   }
 }
