--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "delta-treats",
+  "name": "philosophy-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev --turbopack",
-  "build": "prisma generate && next build --turbopack",
-  "start": "next start",
-  "lint": "next lint",
-  "postinstall": "prisma generate"
-}
-,
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@prisma/client": "^6.16.0",
-    "bcrypt": "^6.0.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "prisma": "^6.16.1",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
@@ -26,7 +21,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "postcss": "^8.5.6",
-    
     "tailwindcss": "^4.1.13"
   }
 }
